--- a/templates/about-company.html
+++ b/templates/about-company.html
@@ -1,21 +1,7 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta name="theme-color" content="#ffffff"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_io/apple-touch-icon.png' %}"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}"/>
-    <link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}"/>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css"/>
-    <link rel="stylesheet" href="{% static 'fonts/PTSerif/stylesheet.css' %}"/>
-    <link rel="stylesheet" href="{% static 'fonts/PTSans/stylesheet.css' %}"/>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-    <title>About company</title>
-</head>
+
+{% block content %}
 <body>
     <header class="header">
         <div class="container">
@@ -27,12 +13,12 @@
                     <div class="navigation">
                         <ul class="nav">
                             <div class="nav-group">
-                                <li class="nav-link active"><a href="#">О нас</a></li>
-                                <li class="nav-link"><a href="#">Продукция</a></li>
-                                <li class="nav-link"><a href="#">Публикации</a></li>
+                                <li class="nav-link active"><a href="/about">О нас</a></li>
+                                <li class="nav-link"><a href="/product">Продукция</a></li>
+                                <li class="nav-link"><a href="/publications">Публикации</a></li>
                             </div>
                             <div class="nav-group">
-                                <li class="nav-link"><a href="#">Рецепты</a></li>
+                                <li class="nav-link"><a href="/recipes">Рецепты</a></li>
                             </div>
                         </ul>
                     </div>
@@ -78,36 +64,8 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo"><a href="#">Разработано YOUR-NAME &copy; <span id="current-year"></span></a></div>
-                <div class="footer-nav-content">
-                    <nav class="nav">
-                        <ul>
-                            <li><a href="#">О нас</a></li>
-                            <li><a href="#">Продукция</a></li>
-                            <li><a href="#">Публикации</a></li>
-                            <li><a href="#">Рецепты</a></li>
-                        </ul>
-                    </nav>
-                    <div class="footer-link">
-                        <div class="network-link">
-                            <a href="#"><img src="{% static 'img/svg/instagram-icon.svg' %}" alt="Instagram"/></a>
-                            <a href="#"><img src="{% static 'img/svg/facebook-icon.svg' %}" alt="Facebook"/></a>
-                            <a href="#"><img src="{% static 'img/svg/whatsapp-icon.svg' %}" alt="WhatsApp"/></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/swiper@11.1.14/swiper.min.js"></script>
-    <script src="{% static 'js/libs.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
     <script>
         document.getElementById('current-year').textContent = new Date().getFullYear();
     </script>
 </body>
-</html>
+{% endblock %}
