--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,44 @@
     <link rel="stylesheet" href="{% static 'fonts/PTSans/stylesheet.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
 </head>
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="header-content">
+                <div class="header-logo">
+                    <div class="header-logo__img"><a href="#"><img src="{% static 'img/svg/logo-header.svg' %}" alt="Логотип компании"/></a></div>
+                </div>
+                <div class="header-nav__content">
+                    <div class="navigation">
+                        <ul class="nav">
+                            <div class="nav-group">
+                                <li class="nav-link active"><a href="/about">О нас</a></li>
+                                <li class="nav-link"><a href="/product">Продукция</a></li>
+                                <li class="nav-link"><a href="/publications">Публикации</a></li>
+                            </div>
+                            <div class="nav-group">
+                                <li class="nav-link"><a href="/recipes">Рецепты</a></li>
+                            </div>
+                        </ul>
+                    </div>
+                    <div class="header-language">
+                        <div class="network-link">
+                            <a href="{{ social_media.instagram }}"><img src="{% static 'img/svg/instagram-icon.svg' %}" alt="Instagram"/></a>
+                            <a href="{{ social_media.facebook }}"><img src="{% static 'img/svg/facebook-icon.svg' %}" alt="Facebook"/></a>
+                            <a href="{{ social_media.phone_number }}"><img src="{% static 'img/svg/whatsapp-icon.svg' %}" alt="WhatsApp"/></a>
+                        </div>
+                        <div class="language-link">
+                            <a href="#"><img src="{% static 'img/svg/kg-icon.svg' %}" alt="Кыргызский"/></a>
+                            <a href="#"><img src="{% static 'img/svg/ru-icon.svg' %}" alt="Русский"/></a>
+                            <a href="#"><img src="{% static 'img/svg/en-icon.svg' %}" alt="English"/></a>
+                            <a href="#"><img src="{% static 'img/svg/kz-icon.svg' %}" alt="Қазақша"/></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
         {% block content %}
         {% endblock %}
 
@@ -33,9 +71,9 @@
                     </nav>
                     <div class="footer-link">
                         <div class="network-link">
-                            <a href="#"><img src="{% static 'img/svg/instagram-icon.svg' %}" alt="Instagram"/></a>
-                            <a href="#"><img src="{% static 'img/svg/facebook-icon.svg' %}" alt="Facebook"/></a>
-                            <a href="#"><img src="{% static 'img/svg/whatsapp-icon.svg' %}" alt="WhatsApp"/></a>
+                            <a href="{{ social_media.instagram }}"><img src="{% static 'img/svg/instagram-icon.svg' %}" alt="Instagram"/></a>
+                            <a href="{{ social_media.facebook }}"><img src="{% static 'img/svg/facebook-icon.svg' %}" alt="Facebook"/></a>
+                            <a href="{{ social_media.phone_number }}"><img src="{% static 'img/svg/whatsapp-icon.svg' %}" alt="WhatsApp"/></a>
                         </div>
                     </div>
                 </div>
@@ -46,4 +84,5 @@
     <script src="https://unpkg.com/swiper@11.1.14/swiper.min.js"></script>
     <script src="{% static 'js/libs.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
+</body>
 </html>
