--- a/templates/product.html
+++ b/templates/product.html
@@ -2,296 +2,81 @@
 {% load static %}
 
 {% block content %}
-  <body>
-    <header class="header">
-      <div class="container">
-        <div class="header-content">
-          <div class="header-logo">
-            <div class="header-logo__img"><a href="#"><img src="{% static 'img/svg/logo-header.svg' %}"/></a></div>
-          </div>
-          <div class="header-nav__content">
-            <div class="navigation">
-              <ul class="nav">
-                <div class="nav-group">
-                  <li class="nav-link active"><a href="/about">О нас</a></li>
-                  <li class="nav-link"><a href="/product">Продукция</a></li>
-                  <li class="nav-link"><a href="/publications">Публикации</a></li>
-                </div>
-                <div class="nav-group">
-                  <li class="nav-link"><a href="/recipes">Рецепты</a></li>
-                </div>
-              </ul>
-            </div>
-            <div class="header-language">
-              <div class="network-link">
-                <a href="#"><img src="{% static 'img/svg/instagram-icon.svg' %}"/></a>
-                <a href="#"><img src="{% static 'img/svg/facebook-icon.svg' %}"/></a>
-                <a href="#"><img src="{% static 'img/svg/whatsapp-icon.svg' %}"/></a>
-              </div>
-              <div class="language-link">
-                <a href="#"><img src="{% static 'img/svg/kg-icon.svg' %}"/></a>
-                <a href="#"><img src="{% static 'img/svg/ru-icon.svg' %}"/></a>
-                <a href="#"><img src="{% static 'img/svg/en-icon.svg' %}"/></a>
-                <a href="#"><img src="{% static 'img/svg/kz-icon.svg' %}"/></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-    <section class="product">
-      <div class="container">
+<section class="product">
+    <div class="container">
         <div class="product__content">
-          <div class="product-left">
-            <h1> Продукция</h1>
-          </div>
-          <div class="product-right">
-            <div class="crumb"><a href="#">Главная</a><a href="#">Продукция</a><span> Колбасы</span></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <div class="product__section-all">
-      <section class="product__section-group">
-        <div class="parallax" style="background: url('{% static 'img/jpg/slider-background.jpg' %}')">
-          <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
-          <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
-          <div class="parallax-heading">
-            <h2>полукапченые колбасы</h2>
-          </div>
-        </div>
-        <div class="product-sausage">
-          <div class="container">
-            <div class="product-right-all">
-              <div class="product-right">
-                <div class="product__card-all">
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img9.png' %}"/></div>
-                      <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="button__product-all"><a href="#">Смотреть все</a></div>
-              </div>
+            <div class="product-left">
+                <h1>Продукция</h1>
             </div>
-          </div>
-        </div>
-      </section>
-      <section class="product__section-group">
-        <div class="parallax" style="background: url('{% static 'img/jpg/slider-background.jpg' %}')">
-          <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
-          <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
-          <div class="parallax-heading">
-            <h2>вареные колбасы</h2>
-          </div>
-        </div>
-        <div class="product-sausage">
-          <div class="container">
-            <div class="product-right-all">
-              <div class="product-right">
-                <div class="product__card-all">
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img9.png' %}"/></div>
-                      <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
-                    </div>
-                  </div>
+            <div class="product-right">
+                <div class="crumb">
+                    <a href="#">Главная</a>
+                    <a href="#">Продукция</a>
+                    <span> Колбасы</span>
                 </div>
-                <div class="button__product-all"><a href="#">Смотреть все</a></div>
-              </div>
             </div>
-          </div>
         </div>
-      </section>
-      <section class="product__section-group">
-        <div class="parallax" style="background: url('{% static 'img/jpg/slider-background.jpg' %}')">
-          <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
-          <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
-          <div class="parallax-heading">
-            <h2>сэндвичи</h2>
-          </div>
-        </div>
-        <div class="product-sausage">
-          <div class="container">
-            <div class="product-right-all">
-              <div class="product-right">
-                <div class="product__card-all">
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                  <div class="product__card-inner">
-                    <div class="product__card">
-                      <div class="product__card-img"><img src="{% static 'img/png/img9.png' %}"/></div>
-                      <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="button__product-all"><a href="#">Смотреть все</a></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
     </div>
-  </body>
+</section>
+
+<div class="product__section-all">
+    {% for category in product_category_list %}
+    <section class="product__section-group">
+        <div class="parallax" style="background: url('{% static 'img/jpg/slider-background.jpg' %}')">
+            <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
+            <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
+            <div class="parallax-heading">
+                <h2>{{ category.name }}</h2>
+            </div>
+        </div>
+        <div class="product-sausage">
+            <div class="container">
+                <div class="product-right-all">
+                    <div class="product-right">
+                        <div class="product__card-all">
+                            {% for product in product_list %}
+                                {% if product.category == category %}
+                                <div class="product__card-inner">
+                                    <div class="product__card">
+                                        <div class="product__card-img">
+                                            <img src="{{ product.image.url }}" alt="{{ product.name }}" />
+                                        </div>
+                                        <h4>{{ product.name }}</h4>
+                                        <a href="{% url 'product_inner' product.pk %}">Подробнее</a>
+                                    </div>
+                                </div>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <div class="button__product-all"><a href="#">Смотреть все</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    {% endfor %}
+</div>
+
+<!-- Пагинация -->
+<div class="pagination">
+    <div class="pagination__left">
+        {% if product_list.has_previous %}
+            <a class="arrow-left" href="?page={{ product_list.previous_page_number }}">←</a>
+        {% else %}
+            <span class="arrow-left disabled">←</span>
+        {% endif %}
+    </div>
+    <div class="pagination__numbers">
+        {% for page_num in product_list.paginator.page_range %}
+            <a class="{% if product_list.number == page_num %}active{% endif %}" href="?page={{ page_num }}">{{ page_num }}</a>
+        {% endfor %}
+    </div>
+    <div class="pagination__right">
+        {% if product_list.has_next %}
+            <a class="arrow-right" href="?page={{ product_list.next_page_number }}">→</a>
+        {% else %}
+            <span class="arrow-right disabled">→</span>
+        {% endif %}
+    </div>
+</div>
 {% endblock %}
