--- a/templates/about-company.html
+++ b/templates/about-company.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+{% load i18n %}
     <section class="product">
         <div class="container">
             <div class="product__content">
